Fix: Horizontal scroll bar in selectable datagrids (#2734)

--- a/src/clr-addons/themes/phs/_css.overrides.scss
+++ b/src/clr-addons/themes/phs/_css.overrides.scss
@@ -303,4 +303,10 @@
       padding-right: 0;
     }
   }
+
+  // Remove the last column separator in datagrids
+  clr-dg-column:not(.datagrid-hidden-column):not(:has(+ clr-dg-column:not(.datagrid-hidden-column)))
+    .datagrid-column-separator {
+    display: none;
+  }
 }
